work on responsive, add favicon, add button to chatbox

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
         <script src="./app.js"></script>
+        <link rel="icon" type="image/png" href="assets/Jumping_CC.svg"/>
         <link rel="stylesheet" href="build/style.css">
         <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
@@ -19,6 +20,11 @@
             <div class="banner">
                 <img src="./assets/Jumping_CC.svg" alt="logo">
             </div>
+            <input type="checkbox" id="click">
+            <label for="click">
+                <img src="assets/Jumping_CC.svg" alt="logo Jumping CC">
+                <img src="assets/cross_icon.png" alt="cross white">
+            </label>
             <div class="chatbox">
                 <div class="chatbox__header">
                     <img src="assets/_MG_9428.jpg" alt="operateur picture">
