update responsive deisng

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="banner">
                 <img src="./assets/Jumping_CC.svg" alt="logo">
             </div>
-            <input type="checkbox" id="click">
+            <input type="checkbox" id="click" checked>
             <label for="click">
                 <img src="assets/Jumping_CC.svg" alt="logo Jumping CC">
                 <img src="assets/cross_icon.png" alt="cross white">
