fix bug and add gradient with secondary color

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="banner">
                 <img src="./assets/Jumping_CC.svg" alt="logo">
             </div>
-            <input type="checkbox" id="click" checked>
-            <label for="click">
+            <input type="checkbox" id="chatbox-toggle" checked>
+            <label for="chatbox-toggle" id="chatbox-label">
                 <img src="assets/Jumping_CC.svg" alt="logo Jumping CC">
                 <img src="assets/cross_icon.png" alt="cross white">
             </label>
