prevent error in console and let time for JS to import src

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     messages">
                         <p><b>{{message.author}}</b></p>
                         <div class="chatbox__content">
-                            <img class="chatbox__pictures" src="assets"
+                            <img class="chatbox__pictures" src="//:0"
                             data-ng-src="{{message.img}}"
                             data-ng-class="{left:message.me}" alt="profil
                             picture">
