update img src for profil picture

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="chatbox__writing" data-ng-if="messageInput">
                     <div data-ng-class="{show:messageInput}">
-                        <img src="assets" data-ng-src="{{messageInput.img}}"
+                        <img src="//:0" data-ng-src="{{messageInput.img}}"
                         alt="profil picture">
                         <p>{{messageInput.author}} écrit ...</p>
                     </div>
